need to fix the section, sidebar is overflowing

--- a/responsive web design/technical documentation/template/template.css
+++ b/responsive web design/technical documentation/template/template.css
@@ -19,11 +19,16 @@ a {
 li {
     list-style: none;
 }
+#mainHead {
+    font-size:40px;
+    text-align:center;
+}
 header {
     width:100%; 
     height:50px; 
     margin:auto;
-    border-bottom: 1px solid black;    
+    /* border-bottom: 1px solid black;   */
+    font-size: 40px;  
     
 }
 #mainhead{
@@ -33,6 +38,14 @@ header {
     font-size: 25px;
     font-weight:bolder;
 
+}
+
+nav{
+    width:100%; text-align:center;
+}
+nav a{
+    display:block; padding: 15px 0;
+    border-bottom: 5px solid color:blue;
 }
 /* div.main-body {
     display: grid;
